--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="setu_grey">#FF435464</color>
+    <color name="baby_blue">#FF77a6f2</color>
 </resources>
