--- a/fyp-web/src/App.css
+++ b/fyp-web/src/App.css
@@ -14,8 +14,8 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #77a6f0;
+  /* min-height: 100vh; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,8 +24,36 @@
   color: white;
 }
 
+h1 {
+  margin-bottom: 5px;
+}
+
+h2 {
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+
+h4 {
+  margin-top: 5px;
+}
+
+h5 {
+  margin-top: 5px;
+}
+
+.App-body {
+  background-color: #ffffff;
+  /* min-height: 100vh; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: black;
+}
+
 .App-link {
-  color: #61dafb;
+  color: #77a6f0;
 }
 
 @keyframes App-logo-spin {
