--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="setu_grey">#FF435464</color>
     <color name="baby_blue">#FF77a6f2</color>
+    <color name="dark_baby_blue">#FF426fb8</color>
     <color name="emerald_green">#FF3da740</color>
 </resources>
