--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,7 @@
     <color name="baby_blue">#FF77a6f2</color>
     <color name="dark_baby_blue">#FF426fb8</color>
     <color name="emerald_green">#FF3da740</color>
+    <color name="open_green">#82f768</color>
+    <color name="closed_red">#ff4d4d</color>
+    <color name="maintenance_yellow">#f09c2e</color>
 </resources>
