Added content to detail screen, changed Attraction.length to int, changed colours of various app elements

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="setu_grey">#FF435464</color>
     <color name="baby_blue">#FF77a6f2</color>
     <color name="dark_baby_blue">#FF426fb8</color>
+    <color name="light_baby_blue">#FFd7e5fc</color>
     <color name="emerald_green">#FF3da740</color>
     <color name="open_green">#82f768</color>
     <color name="closed_red">#ff4d4d</color>
