--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,5 +15,6 @@
     <color name="emerald_green">#FF3da740</color>
     <color name="open_green">#82f768</color>
     <color name="closed_red">#ff4d4d</color>
+    <color name="disabled_red">#a32f2f</color>
     <color name="maintenance_yellow">#f09c2e</color>
 </resources>
