--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="baby_blue">#FF77a6f2</color>
     <color name="dark_baby_blue">#FF426fb8</color>
     <color name="disabled_text_grey">#FFbfbfbf</color>
+    <color name="disabled_text_dark_grey">#FF8a8a8a</color>
     <color name="light_baby_blue">#FFd7e5fc</color>
     <color name="emerald_green">#FF3da740</color>
     <color name="open_green">#82f768</color>
